# red-flagged

./: .env.production  .gitignore  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
api/: __init__.py  index.py
api/models/: schemas.py
api/routers/: analyze.py
api/services/analyzers/: base.py  boomer.py  hogwarts.py  red_flag.py
app/: globals.css  layout.tsx
app/login/: page.tsx
app/services/: api.ts
app/upload/: page.tsx
backend/: test_chat.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: analyze.py  analyzers.py  upload.py
backend/app/services/: chat_parser.py  openai_service.py
backend/app/services/analyzers/: base.py  hogwarts.py  red_flag.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AnalysisVisualizer.tsx  AvatarVisualizer.tsx  FileUploader.tsx  TopNav.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Login.tsx  NotFound.tsx  Register.tsx  ResetPassword.tsx  Upload.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/utils/: avatarGenerator.ts  whatsAppParser.ts
public/: index.html  manifest.json
src/: index.css
src/services/: api.ts
src/types/: index.ts
